--- a/environment.yml
+++ b/environment.yml
@@ -1,21 +1,19 @@
 name: rl-workshop
 channels:
-  - conda-forge
   - pytorch
 dependencies:
-- python=3.6
-- pytorch=1.3
-- torchvision=0.4
-- scikit-learn=0.21
+- python=3.10.12
+- pytorch=2.2.1
+- torchvision=0.17.1
 - jupyterlab=1.1
-- numpy=1.17
-- pandas=0.25
-- matplotlib=3.0
+- numpy=1.25.2
+- pandas=1.5.3
+- matplotlib=3.7.1
 - seaborn=0.9.0
 - ipywidgets
 - nodejs
 - tqdm==4.41.1
-- pillow=7.0.0
 - pip
 - pip:
-  - gym==0.15.3
+  - gym==0.23.1
+  - Pillow==6.2.2
