--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ on:
     branches: [ benchmark ]
 
 jobs:
-  test:
+  test-conda:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -23,4 +23,22 @@ jobs:
       shell: bash -l {0}
       run: |
         conda activate dronerl-env-v3
-        pytest tests/ 
+        pytest tests/
+
+  test-pip:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        
+    - name: Run Tests
+      run: pytest tests/ 
