--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
       shell: bash -l {0}
       run: |
         conda activate dronerl-env-v3
-        pytest tests/
+        pytest python/
 
   test-pip:
     runs-on: ubuntu-latest
@@ -41,4 +41,4 @@ jobs:
         pip install -r requirements.txt
         
     - name: Run Tests
-      run: pytest tests/ 
+      run: pytest python/ 
