--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,12 +38,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r python/requirements.txt
         
     - name: Run Tests
       run: pytest python/
 
-  test-jax:
+  test-jax-pip:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
