add requirements for movie generation

--- a/environment.yml
+++ b/environment.yml
@@ -19,3 +19,5 @@ dependencies:
       - safetensors==0.5.2
       - pyarrow==17.0.0
       - pytest==8.3.4
+      - imageio-ffmpeg==0.6.0
+      - moviepy==1.0.3
