--- a/dronerl_jax/requirements.cpu.txt
+++ b/dronerl_jax/requirements.cpu.txt
@@ -1,9 +1,6 @@
-jax==0.4.35
-jaxlib==0.4.35
-pandas==2.2.3
-matplotlib==3.9.2
-tqdm==4.67.0
-seaborn==0.13.2
-moviepy==1.0.3
+jax==0.4.33
+jaxlib==0.4.33
+tqdm==4.67.1
 flax==0.10.2
+safetensors==0.5.2
 pytest==8.3.4
