--- a/dronerl_jax/requirements.txt
+++ b/dronerl_jax/requirements.txt
@@ -1,10 +1,7 @@
 --find-links https://storage.googleapis.com/jax-releases/libtpu_releases.html
-jax[tpu]==0.4.35
-jaxlib==0.4.35
-pandas==2.2.3
-matplotlib==3.9.2
-tqdm==4.67.0
-seaborn==0.13.2
-moviepy==1.0.3
+jax[tpu]==0.4.33
+jaxlib==0.4.33
+tqdm==4.67.1
 flax==0.10.2
 safetensors==0.5.2
+pytest==8.3.4
