--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: dronerl-env-v3
+name: dronerl-env-v4
 channels:
   - defaults
   - pytorch
@@ -21,3 +21,4 @@ dependencies:
       - pytest==8.3.4
       - imageio-ffmpeg==0.6.0
       - moviepy==1.0.3
+      - wandb==0.19.6
