--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [ env-only ]
+    branches: [ master ]
   pull_request:
-    branches: [ env-only ]
+    branches: [ master ]
 
 jobs:
   test-python-conda:
@@ -21,7 +21,7 @@ jobs:
         activate-environment: dronerl-env-v3
         environment-file: environment.yml
         auto-activate-base: false
-        
+
     - name: Run Tests
       shell: bash -l {0}
       run: |
@@ -40,12 +40,12 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
-        
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r python/requirements.txt
-        
+
     - name: Run Tests
       run: pytest python/
 
@@ -53,16 +53,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
-        
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r jax/requirements.cpu.txt
-        
+        pip install -r jax_impl/requirements.cpu.txt
+
     - name: Run Tests
-      run: pytest jax/ 
+      run: pytest jax_impl/
