--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
       shell: bash -l {0}
       run: |
         conda activate dronerl-env-v3
-        pytest python/
+        pytest tests/torch_tests
 
   test-python-pip:
     runs-on: ubuntu-latest
@@ -47,7 +47,7 @@ jobs:
         pip install -r python/requirements.txt
 
     - name: Run Tests
-      run: pytest python/
+      run: pytest tests/torch_tests
 
   test-jax-pip:
     runs-on: ubuntu-latest
@@ -65,4 +65,23 @@ jobs:
         pip install -r jax_impl/requirements.cpu.txt
 
     - name: Run Tests
-      run: pytest jax_impl/
+      run: pytest tests/jax_tests
+
+  test-common-pip:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r python/requirements.txt
+        pip install -r jax_impl/requirements.cpu.txt
+
+    - name: Run Tests
+      run: pytest tests/test_*.py
