--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,7 +35,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: test-videos-conda
-        path: artifacts/*.mp4
+        path: ${{ github.workspace }}/artifacts/*.mp4
 
   test-python-pip:
     runs-on: ubuntu-latest
@@ -66,7 +66,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: test-videos-pip
-        path: artifacts/*.mp4
+        path: ${{ github.workspace }}/artifacts/*.mp4
 
   test-jax-pip:
     runs-on: ubuntu-latest
